--- a/pom.xml
+++ b/pom.xml
@@ -4,63 +4,138 @@
 	<artifactId>school</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 
- <properties>
-	 <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-	 <maven.compiler.source>1.8</maven.compiler.source>
-	 <maven.compiler.target>1.8</maven.compiler.target>
-	 <junit.version>4.13</junit.version>
-	 <assertj.version>3.15.0</assertj.version>
-	 <mockito.version>3.2.4</mockito.version>
- </properties>
- 
- <dependencies>
- 
-	<dependency>
-		<groupId>junit</groupId>
-		<artifactId>junit</artifactId>
-		<version>${junit.version}</version>
-		<scope>test</scope>
-	</dependency>
-	
-	<dependency>
-		<groupId>org.assertj</groupId>
-	 	<artifactId>assertj-core</artifactId>
-	 	<version>${assertj.version}</version>
-	 	<scope>test</scope>
-	</dependency>
-	
-	<dependency>
-		<groupId>org.mockito</groupId>
-	 	<artifactId>mockito-core</artifactId>
-	 	<version>${mockito.version}</version>
-	 	<scope>test</scope>
-	</dependency>
-	
-	<dependency>
- 		<groupId>org.mongodb</groupId>
-		<artifactId>mongo-java-driver</artifactId>
-		<version>3.9.1</version>
-	</dependency>
-	<dependency>
-		<groupId>ch.qos.logback</groupId>
-		<artifactId>logback-classic</artifactId>
-		<version>1.2.3</version>
-	</dependency>
-	
-	<dependency>
-		<groupId>de.bwaldvogel</groupId>
-		<artifactId>mongo-java-server</artifactId>
-		<version>1.11.1</version>
-		<scope>test</scope>
-	</dependency>
-	
-	<dependency>
-    	<groupId>org.springframework.data</groupId>
-    	<artifactId>spring-data-mongodb</artifactId>
-    	<version>3.0.3.RELEASE</version>
-	</dependency>
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<maven.compiler.source>1.8</maven.compiler.source>
+		<maven.compiler.target>1.8</maven.compiler.target>
+		<junit.version>4.13</junit.version>
+		<assertj.version>3.15.0</assertj.version>
+		<mockito.version>3.2.4</mockito.version>
+		<testcontainers.version>1.10.5</testcontainers.version>
+		<assertj.swing.version>3.9.2</assertj.swing.version>
+	</properties>
 
- </dependencies>
+	<dependencies>
+	
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>${junit.version}</version>
+			<scope>test</scope>
+		</dependency>
+	
+		<dependency>
+			<groupId>org.mockito</groupId>
+		 	<artifactId>mockito-core</artifactId>
+		 	<version>${mockito.version}</version>
+		 	<scope>test</scope>
+		</dependency>
+	
+		<dependency>
+			<groupId>org.mongodb</groupId>
+			<artifactId>mongo-java-driver</artifactId>
+			<version>3.9.1</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+			<version>1.2.3</version>
+		</dependency>
+	
+		<dependency>
+			<groupId>de.bwaldvogel</groupId>
+			<artifactId>mongo-java-server</artifactId>
+			<version>1.11.1</version>
+			<scope>test</scope>
+		</dependency>
+	
+	  	<dependency>
+			<groupId>org.testcontainers</groupId>
+			<artifactId>testcontainers</artifactId>
+			<version>${testcontainers.version}</version>
+			<scope>test</scope>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.assertj</groupId>
+			<artifactId>assertj-swing-junit</artifactId>
+			<version>${assertj.swing.version}</version>
+			<scope>test</scope>
+		</dependency>
+	
+	</dependencies>
 
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>build-helper-maven-plugin</artifactId>
+				<version>3.0.0</version>
+				<executions>
+					<execution>
+						<id>add-test-source</id>
+						<phase>generate-test-sources</phase>
+						<goals>
+							<goal>add-test-source</goal>
+						</goals>
+						<configuration>
+							<sources>
+								<source>src/it/java</source>
+							</sources>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+			
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-failsafe-plugin</artifactId>
+				<version>2.22.1</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>integration-test</goal>
+							<goal>verify</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			
+			<plugin>
+				<groupId>io.fabric8</groupId>
+				<artifactId>docker-maven-plugin</artifactId>
+				<version>0.28.0</version>
+				<configuration>
+					<images>
+						<image>
+							<name>mongo:4.2.3</name>
+							<run>
+								<ports>
+									<port>27017:27017</port>
+								</ports>
+							</run>
+						</image>
+					</images>
+				</configuration>
+				<executions>
+					<execution>
+						<id>docker:start</id>
+						<phase>pre-integration-test</phase>
+						<goals>
+							<goal>start</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>docker:stop</id>
+						<phase>post-integration-test</phase>
+						<goals>
+							<goal>stop</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
 
 </project>
