--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
 		<mockito.version>3.2.4</mockito.version>
 		<testcontainers.version>1.10.5</testcontainers.version>
 		<assertj.swing.version>3.9.2</assertj.swing.version>
+		<awaitility.version>4.0.2</awaitility.version>
 	</properties>
 
 	<dependencies>
@@ -61,6 +62,13 @@
 			<groupId>org.assertj</groupId>
 			<artifactId>assertj-swing-junit</artifactId>
 			<version>${assertj.swing.version}</version>
+			<scope>test</scope>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.awaitility</groupId>
+			<artifactId>awaitility</artifactId>
+			<version>${awaitility.version}</version>
 			<scope>test</scope>
 		</dependency>
 	
